--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#rules">Rules</a></li>
                     <li><a href="#register">Register</a></li>
-                    <li><a href="https://twitter.com/sostoken" target="_blank" class="twitter-link">🐦 Twitter</a></li>
+                    <li><a href="https://x.com/splitorsteal_" target="_blank" class="twitter-link">🐦 Twitter</a></li>
                 </ul>
             </nav>
         </div>
